syntax = "proto3";
package proto.v1;
option go_package = "github.com/textileio/broker-core/auctioneer/v1/;auctioneer";

import "google/protobuf/timestamp.proto";

message Sources {
  CARURL car_url = 1;
  CARIPFS car_ipfs = 2;

  message CARURL {
    string URL = 1;
  }

  message CARIPFS {
    string cid = 1;
    repeated string multiaddrs = 2;
  }
}

// this should be the details of the bridge. put here simply to reuse the
// Sources message with Auction.
message ReadyToAuctionRequest {
    string storage_deal_id = 1;
    string payload_cid = 2;
    uint64 deal_size = 3;
    uint64 deal_duration = 4;
    uint32 deal_replication = 5;
    bool deal_verified = 6;
    repeated string excluded_miners = 7;
    uint64 fil_epoch_deadline = 8;
    Sources sources = 9;
}

message ReadyToAuctionResponse {
  string id = 1;
}

message ProposalAcceptedRequest {
    string auction_id = 1;
    string bid_id = 2;
    string proposal_cid = 3;
}

message ProposalAcceptedResponse {
}

service APIService {
    rpc ReadyToAuction(ReadyToAuctionRequest) returns (ReadyToAuctionResponse) {}
    rpc ProposalAccepted(ProposalAcceptedRequest) returns (ProposalAcceptedResponse) {}
}
