syntax = "proto3";
package broker.v1;
option go_package = "github.com/textileio/broker-core/gen/broker/v1;broker";

import "google/protobuf/timestamp.proto";

message CreateBrokerRequestRequest {
  string cid = 1;
}

message CreateBrokerRequestResponse {
  BrokerRequest request = 1;
}

message CreatePreparedBrokerRequestRequest {
  string cid = 1;
  PreparedCAR preparedCAR = 2;

  message PreparedCAR {
    string piece_cid = 1;
    uint64 piece_size = 2;
    int64 rep_factor = 3;
    google.protobuf.Timestamp deadline = 4;
    CARURL car_url = 5;
    CARIPFS car_ipfs = 6;

    message CARURL {
      string url = 1;
    }

    message CARIPFS {
      string cid = 1;
      repeated string multiaddrs = 2;
    }
  }
}

message CreatePreparedBrokerRequestResponse {
  BrokerRequest request = 1;
}



message GetBrokerRequestInfoRequest {
  string id = 1;
}

message GetBrokerRequestInfoResponse {
  BrokerRequest broker_request = 1;
  repeated BrokerRequestDeal deals = 2;

  message BrokerRequestDeal {
	  string miner = 1;
	  int64 deal_id = 2;
	  uint64 expiration = 3;
  }
}

message CreateStorageDealRequest {
  string batch_cid = 1;
  repeated string broker_request_ids = 2;
}

message CreateStorageDealResponse {
  string id = 1;
}

message StorageDealProposalAcceptedRequest {
  string storage_deal_id = 1;
  string miner = 2;
  string proposal_cid = 3;
}

message StorageDealProposalAcceptedResponse {
}

message StorageDealAuctionedRequest {
    string id = 1;
    string storage_deal_id = 2;
    string payload_cid = 3;
    uint64 deal_size = 4;
    uint64 deal_duration = 5;
    uint32 deal_replication = 6;
    bool deal_verified = 7;
    Status status = 8;
    map<string, Bid> bids = 9;
    map<string, WinningBid> winning_bids = 10;
    google.protobuf.Timestamp started_at = 11;
    google.protobuf.Timestamp updated_at = 12;
    int64 duration = 13;
    uint32 attempts = 14;
    string error = 15;
                               
    enum Status {
        STATUS_UNSPECIFIED = 0;
        STATUS_QUEUED = 1;
        STATUS_STARTED = 2;
        STATUS_FINALIZED = 3;
    }

    message Bid {
        string miner_addr = 1;
        bytes wallet_addr_sig = 2;
        string bidder_id = 3;
        int64 ask_price = 4;
        int64 verified_ask_price = 5;
        uint64 start_epoch = 6;
        bool fast_retrieval = 7;
        google.protobuf.Timestamp received_at = 8;
    }

    message WinningBid {
        string bidder_id = 1;
        bool acknowledged = 2;
        string proposal_cid = 3;
        bool proposal_cid_acknowledged = 4;
    }
}

message StorageDealAuctionedResponse {
}

message StorageDealPreparedRequest {
  string storage_deal_id = 1;
  string piece_cid = 2;
  uint64 piece_size = 3;
}

message StorageDealPreparedResponse {
}

message StorageDealFinalizedDealRequest {
    string storage_deal_id = 1;
    int64 deal_id = 2;
    uint64 deal_expiration = 3;
    string miner_id = 4;
    string error_cause = 5;
}

message StorageDealFinalizedDealResponse {
}

message BrokerRequest {
  string id = 1;
  string data_cid = 2;
  Status status = 3;
  string storage_deal_id = 4;
  google.protobuf.Timestamp created_at = 5; 
  google.protobuf.Timestamp updated_at = 6; 

  enum Status {
    UNSPECIFIED = 0;
    BATCHING = 1;
    PREPARING = 2;
    AUCTIONING = 3;
    DEALMAKING = 4;
    SUCCESS = 5;
  }
}

service APIService {
  rpc CreateBrokerRequest(CreateBrokerRequestRequest) returns (CreateBrokerRequestResponse) {}
  rpc CreatePreparedBrokerRequest(CreatePreparedBrokerRequestRequest) returns (CreatePreparedBrokerRequestResponse) {}
  rpc GetBrokerRequestInfo(GetBrokerRequestInfoRequest) returns (GetBrokerRequestInfoResponse) {}
  rpc CreateStorageDeal(CreateStorageDealRequest) returns (CreateStorageDealResponse) {}
  rpc StorageDealAuctioned(StorageDealAuctionedRequest) returns (StorageDealAuctionedResponse) {}
  rpc StorageDealFinalizedDeal(StorageDealFinalizedDealRequest) returns (StorageDealFinalizedDealResponse) {}
  rpc StorageDealProposalAccepted(StorageDealProposalAcceptedRequest) returns (StorageDealProposalAcceptedResponse) {}
  rpc StorageDealPrepared(StorageDealPreparedRequest) returns (StorageDealPreparedResponse) {}
}


